<resources>
    <string name="app_name">Task Timer</string>
    <string name="action_settings">Settings</string>
    <string name="menumain_addTask">Add Task</string>
    <string name="menumain_showDurations">Durations Report</string>
    <string name="menumain_settings">Settings</string>
    <string name="menumain_showAbout">About TaskTimer</string>
    <string name="menumain_generate">Generate data</string>
    <string name="no_task_message">No Task Selected.</string>
    <string name="edit_button_description">Button to edit task details.</string>
    <string name="delete_button_description">Button to delete task</string>
    <string name="addedit_name_hint">Task name: required</string>
    <string name="addedit_description_hint">Task description (optional)</string>
    <string name="addedit_sort_hint">Orders: sorts low to high</string>
    <string name="addedit_save_text">Save</string>
    <string name="title_activity_add_edit">AddEditActivity</string>
    <string name="instructions_heading">Instructions</string>
    <string name="instructions">Use the add button (+) in the toolbar above to create new tasks.\n\nTasks with lower sort orders will be placed higher up the list.Tasks with the same sort order will be sorted alphabetically.\n\nTapping a task will start the timer for that task (and will stop the timer for any previous task that was being timed).\n\nEach task has Edit and Delete buttons if you eant to change the details or remove the task.</string>
</resources>
