<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.example.haoyu.tasktimer.MainActivity">
    <item
        android:id="@+id/menumain_addTask"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="102"
        app:showAsAction="ifRoom"
        android:title="@string/menumain_addTask"/>
    <item
        android:id="@+id/menumain_showDurations"
        android:icon="@android:drawable/ic_menu_view"
        android:orderInCategory="104"
        app:showAsAction="ifRoom"
        android:title="@string/menumain_showDurations"/>
    <item
        android:id="@+id/menumain_settings"
        android:orderInCategory="105"
        android:title="@string/menumain_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menumain_showAbout"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="106"
        android:title="@string/menumain_showAbout"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menumain_generate"
        android:orderInCategory="107"
        app:showAsAction="never"
        android:title="@string/menumain_generate"
        android:visible="false"/>
</menu>
